<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright (C) 2013 Julien Vermet

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">BugDroid</string>

    <!-- About -->
    <string name="about">Need help? Questions? : ju.vermet@gmail.com OR\nJulienDev on #BugDroid at irc.mozilla.org\n\nCheckout and contribute on\nhttps://github.com/JulienDev/BugDroid</string>

    <!-- ActionBar Tabs -->
    <string name="ab_dashboard">Dashboard</string>
    <string name="ab_products">Products</string>
    <string name="ab_starred">Starred</string>
    <string name="ab_search">Search</string>

    <!-- Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_instances_accounts">Instances &amp; Accounts</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_bookmark">Bookmark - Available soon</string>
    <string name="menu_edit">Edit - Available soon</string>
    <string name="menu_share">Share</string>
    <string name="menu_instance_add">Add account</string>

    <string-array name="menu_navigation">
        <item>Search</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- SearchView -->
    <string name="search_hint">Bug # or quick search</string>

    <!-- Products -->
    <string name="products">Products</string>
    <string name="products_nothing_found">No product found</string>
    <string name="products_loading">Loading&#8230;</string>

    <!-- Bug -->
    <string name="bug_title">Title</string>
    <string name="bug_status">Status</string>
    <string name="bug_resolution">Resolution</string>
    <string name="bug_product">Product</string>
    <string name="bug_component">Component</string>
    <string name="bug_version">Version</string>
    <string name="bug_platform">Platform</string>
    <string name="bug_importance">Importance</string>
    <string name="bug_assigned_to">Assigned to</string>
    <string name="bug_qa_contact">QA contact</string>
    <string name="bug_target_mil">Target mil.</string>
    <string name="bug_comment_add_hint">Type comment</string>
    <string name="bug_error">Error while retrieving bug</string>
    
    <!-- Comments -->
    <string name="comment_empty">Your message is empty</string>
    <string name="comment_post_success">Comment has been posted</string>
    <string name="comment_post_error">Error while posting your message :\n</string>

    <!-- Bugs -->
    <string name="bugs">Bugs</string>
    <string name="bugs_nothing_found">No bug found</string>
    <string name="bugs_error">Error while retrieving bugs</string>
    <string name="bugs_search_in_progress">Search in progress&#8230;</string>
    <string name="bugs_found">%d bugs</string>

    <!-- Attachments -->
    <string name="attachments_no_attachment">No attachment</string>

    <!-- Ccs -->
    <string name="ccs_no_cc">No cc</string>

    <!-- Instances & Accounts -->
    <string name="instance_name">Name</string>
    <string name="instance_name_hint">B.M.O</string>
    <string name="instance_url">BzAPI Url</string>
    <string name="instance_url_hint">https://api-dev.bugzilla.mozilla.org/latest/</string>
    <string name="instance_use_no_account">Without account</string>
    <string name="instances_loading">Loading...</string>
    <string name="account_email">Email address</string>
    <string name="account_password">Password</string>
    <string name="account_show_password">Show password</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_search">Search</string>
    <string name="settings_search_for_title">Search bugs for</string>

</resources>